--- a/package.json
+++ b/package.json
@@ -12,7 +12,18 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
-    "react-web-vector-icons": "^1.0.2"
+    "react-web-vector-icons": "^1.0.2",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "toastr": "^2.1.4"
+  },
+  "toastr": {
+    "version": "2.1.4",
+    "resolved": "https://registry.npmjs.org/toastr/-/toastr-2.1.4.tgz",
+    "integrity": "sha1-i0O+ZPudDEFIcURvLbjoyk6V8YE=",
+    "requires": {
+      "jquery": ">=1.12.0"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
