--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@material-ui/styles": "^4.0.0",
+    "axios": "^0.19.0",
     "mdbreact": "^4.15.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
@@ -15,6 +17,7 @@
     "react-web-vector-icons": "^1.0.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "shave": "^2.5.3",
     "toastr": "^2.1.4"
   },
   "toastr": {
