--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.0.3",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
+    "react-spinners": "^0.5.13",
     "react-web-vector-icons": "^1.0.2",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
